syntax = "proto3";

option csharp_namespace = "PostService.API.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

//package post;

service GRPCMessagesService {
	rpc GetMessages (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
	string threadID = 1;
}

message MessageResponse {
	repeated Message messages = 1;
}

message Message {
    string threadId = 1;              // Guid threadId
    string userId = 2;                 // Guid userId
    string content = 3;                // string msg
    int32 likesQuantity = 4;           // int likesQuantity
    int32 dislikesQuantity = 5;        // int dislikeQuantity
    google.protobuf.Timestamp createdAt = 6;  // DateTime createTime
    google.protobuf.StringValue parentMessageId = 7;  // Guid? parentMessageId (nullable)
    
    // Дополнительные поля для удобства
    //UserInfo user = 9;                  // Информация о пользователе
    //int32 repliesCount = 10;            // Количество ответов на это сообщение
}